just about to convert eps
Signed-off-by: Alexander McMurray <alexgmcm@gmail.com>

--- a/Dissertation/Rakefile
+++ b/Dissertation/Rakefile
@@ -3,12 +3,13 @@ require 'rake/clean'
 # Configuration
 NAME = "report"
 
-TEX_EXEC = "xelatex"
+TEX_EXEC = "pdflatex"
 
 # Semi-Configuration
 PDF_NAME = "#{NAME}.pdf"
 TEX_NAME = "#{NAME}.tex"
-DEFAULT_ARGS = "-shell-escape -interaction=nonstopmode -papersize=a4"
+DEFAULT_ARGS = "-shell-escape -interaction=nonstopmode"
+# -papersize=a4"
 
 # Cleaning FileLists
 CLEAN.include(['**/*.aux', '*.log', '*.out', '*.pyg', '*.bak', '*.toc', '*.bbl', '*.blg', '*.toc', '*.lof'])
